@@ -87,6 +87,7 @@ Application Changes:
 - Improvements and qualities that affect the linked attribute of a skill now have their effects properly reflected in the UI all the time.
 - Closing an opened character that is also not the currently viewed character in the program no longer causes the tool strip of icons at the top to misbehave.
 - Qualities with levels taken at only level 1 now display their level as "1" instead of not displaying any level.
+- When removing content that has added potentially duplicate specializations to a character, the specialization that was added by said content is now properly always gets removed.
 
 Data Changes:
 - Consolidated all German Data Changes custom data and all German-exclusive content of sourcebooks printed in English into a single German Data Changes c.ustom data folder.
